<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CocktailApp</string>
    <string name="error_login_failed">Connexion echouee.</string>
    <string name="error_registration_failed">Inscription echouee.</string>
    <string name="error_email_required">L\'email est requis.</string>
    <string name="error_password_length">Le mot de passe doit contenir au moins 8 caracteres.</string>
    <string name="error_loading_cocktails">Erreur lors du chargement des cocktails : %1$s</string>
    <string name="error_loading_cocktails_simple">Impossible de charger les cocktails.</string>
    <string name="error_cocktail_inconnu">Cocktail introuvable.</string>
    <string name="label_nom_inconnu">Nom inconnu</string>
    <string name="label_info_non_disponible">Information non disponible</string>
    <string name="label_note_experts">Note des experts : %1$.1f</string>
    <string name="label_ingredients_prefix">Ingredients :&#x0a;%1$s</string>
    <string name="label_ingredients_absents">Aucun ingredient trouve.</string>
    <string name="info_favori_ajoute">%1$s ajoute a vos favoris.</string>
    <string name="info_favori_retrait">%1$s retire de vos favoris.</string>
    <string name="error_favori">Impossible de mettre a jour les favoris : %1$s</string>
    <string name="info_note_enregistree">Note enregistree.</string>
    <string name="error_note">Impossible d\'enregistrer la note.</string>
    <string name="error_selection_ingredients">Merci de selectionner au moins un ingredient.</string>
    <string name="error_aucun_cocktail">Aucun cocktail ne correspond aux ingredients selectionnes.</string>
    <string name="info_aucun_favori">Aucun favori pour l\'instant.</string>
    <string name="error_chargement_favoris">Impossible de charger les favoris.</string>
    <string name="error_chargement_cocktails_favoris">Impossible de charger les cocktails favoris.</string>
    <string name="error_chargement_tutos">Impossible de charger les tutoriels.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="action_login">Se connecter</string>
    <string name="action_register">S\'inscrire</string>
    <string name="label_ingredients">Ingredients :</string>
    <string name="action_save_rating">Sauvegarder ma note</string>
    <string name="action_add_favorite">Ajouter aux favoris</string>
    <string name="action_remove_favorite">Retirer des favoris</string>
    <string name="menu_tous_cocktails">Tous les cocktails</string>
    <string name="menu_favoris">Favoris</string>
    <string name="menu_recherche">Recherche</string>
    <string name="menu_my_ingredients">Ajouter mes ingredients</string>
    <string name="menu_hasard">Cocktail au hasard</string>
    <string name="menu_tutoriels">Tutoriels</string>
    <string name="menu_deconnexion">Deconnexion</string>
    <string name="title_toolbar_random">CocktailApp</string>
    <string name="action_trouver_hasard">Trouver un cocktail au hasard</string>
    <string name="title_toolbar_search">Rechercher</string>
    <string name="hint_search">Veuillez entrer le nom du cocktail</string>
    <string name="title_favoris">Vos cocktails favoris</string>
    <string name="title_cocktail_list">Liste des cocktails</string>
    <string name="title_tutoriels">Liste des tutoriels</string>
    <string name="title_tutoriel_detail">Nom du tutoriel</string>
    <string name="label_voir_recette">Voir la recette</string>
    <string name="title_my_ingredients">Mes ingredients</string>
    <string name="title_choose_ingredient_source">Comment voulez-vous choisir les ingredients ?</string>
    <string name="hint_filter_ingredients">Filtrer les ingredients</string>
    <string name="action_use_my_ingredients">Utiliser mes ingredients</string>
    <string name="action_choose_ingredient_list">Choisir dans la liste complete</string>
    <string name="action_back_to_choice">Retour au choix</string>
    <string name="action_save_my_ingredients">Enregistrer mes ingredients</string>
    <string name="action_clear_my_ingredients">Vider ma liste</string>
    <string name="label_my_ingredients_count">%1$d ingredients selectionnes</string>
    <string name="info_my_ingredients_saved">Vos ingredients ont ete enregistres.</string>
    <string name="error_no_my_ingredients">Ajoutez d\'abord vos ingredients.</string>

    <!-- Soirees -->
    <string name="menu_creer_soiree">Creer une soiree</string>
    <string name="menu_rejoindre_soiree">Rejoindre une soiree</string>
    <string name="party_code_label">Code soiree</string>
    <string name="party_creer">Creer la soiree</string>
    <string name="party_rejoindre">Rejoindre la soiree</string>
    <string name="party_saisir_code">Entrer le code (8 caracteres)</string>
    <string name="party_seuil_manquants">Nombre max d\'ingredients manquants</string>
    <string name="party_ingredients_disponibles">Ingredients disponibles</string>
    <string name="party_cocktails_disponibles">Cocktails disponibles</string>
    <string name="party_dashboard_titre">Tableau de bord barman</string>
    <string name="party_ajouter_cocktail">Ajouter un cocktail a la soiree</string>
    <string name="party_ajouter_barman">Ajouter un barman</string>
    <string name="party_commandes_en_attente">Commandes en attente</string>
    <string name="party_clore">Clore la soiree</string>
    <string name="party_commander">Commander</string>
    <string name="party_quitter">Quitter la soiree</string>
    <string name="party_statut_pending">En attente</string>
    <string name="party_statut_preparation">En preparation</string>
    <string name="party_statut_servi">Servi</string>
    <string name="party_statut_btn_preparation">En preparation</string>
    <string name="party_statut_btn_servi">Servi</string>
    <string name="party_info_code">Code de la soiree : %1$s</string>
    <string name="party_info_creee">Soiree creee.</string>
    <string name="party_info_rejointe">Soiree rejointe.</string>
    <string name="party_error_code">Code invalide ou soiree inactive.</string>
    <string name="party_error_creation">Creation impossible.</string>
    <string name="party_error_commande">Commande impossible.</string>
    <string name="party_btn_barman">Ouvrir le tableau barman</string>
    <string name="party_prompt_name">Entrez votre nom pour la soiree</string>
    <string name="party_error_name">Le nom est obligatoire.</string>
    <string name="cocktails_json_url">https://cocktail-caa91.web.app/cocktails.json</string>
    <string name="party_error_chargement">Chargement impossible.</string>
</resources>
